Fix scrollbar issue

--- a/src/components/posts/uploadOrEditPost/_uploadOrEditPost.module.scss
+++ b/src/components/posts/uploadOrEditPost/_uploadOrEditPost.module.scss
@@ -140,7 +140,7 @@
 
 .uploadedFilesContainer {
 	margin-top: 4rem;
-	max-height: 330px;
+	max-height: 220px;
 	overflow-y: auto;
 }
 
